--- a/proyecto-final-entrega-2/index.css
+++ b/proyecto-final-entrega-2/index.css
@@ -13,3 +13,12 @@ body{
 .description {
   margin-top: 60px;
 }
+
+#method-img {
+  width: 100%;
+  height: 100%;
+}
+
+#method-text {
+  margin: 40px 0px 0px 70px;
+}
