--- a/proyecto-final-entrega-3/index.css
+++ b/proyecto-final-entrega-3/index.css
@@ -1,3 +1,12 @@
 body{
   background-image: linear-gradient(white, lightcyan);
 }
+
+.img-center {
+  width: 100%;
+  height: auto;
+}
+
+.fixed-size {
+  width: 30%;
+}
